@@ -1,3 +1,9 @@
+[B]2.3.2[/B]
+. Fix thumb and fanart link creation for categories, launchers and items.
+
+[B]2.3.1[/B]
+. Fix GameFAQs thumbs and fanarts scrapers.
+
 [B]2.3.0[/B]
 . Add a queries launcher creation.
 . Fix message display for launchers fanart image change.
